src/components/styles/home.module.css
.header {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 40px;
  align-items: center;
  background-repeat: no-repeat;
  background-size: cover;
  margin-bottom: 20px;
  padding: 30px;
  min-height: 100vh;
  height: 100%;
}
.header h2 {
  font-size: 150px;
  font-weight: 700;
  color: #fff;
  font-family: "Inter", sans-serif;
}

.intro {
  transform: translate(30%, 5%);
}

.six {
  position: relative;
  left: 22%;
}

.intro p {
  /* max-width: 515px; */
  font-size: 24px;
  line-height: 40px;
  transform: translateY(-10%);
}

.topImage img {
  transform: translate(35%, 10%);
  max-width: 65%;
}

.bottomImage {
  transform: translate(10%, 20%);
}

.bottomImage img {
  max-width: 30%;
}

.meet {
  display: none;
}

/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {
  .header {
    display: flex;
    flex-direction: column;
  }

  .header h2 {
    font-size: 70px;
    margin-bottom: 0;
    width: fit-content;
  }

  .six {
    position: relative;
    left: 40%;
  }

  .intro {
    transform: none;
  }

  .intro p {
    min-width: 299px;
    font-size: 18px;
    line-height: 32px;
    transform: translateY(-10%);
  }

  .topImage {
    width: 350px;
    transform: none;
    display: flex;
    justify-content: center;
  }

  .topImage img {
    width: 100%;
    transform: none;
  }

  .bottomImage img {
    width: 157px;
  }

  .bottomImage {
    transform: translate(2%, 20%);
    display: flex;
  }

  .meet {
    display: flex;
    align-self: center;
    font-weight: bold;
    font-size: 20px;
    color: #fff;
    text-decoration: none;
    transition: all 250ms ease-out;
  }

  .meet:active {
    color: #dba704;
  }
}

